src/styles.scss
// Import Fuse main library
@import "app/core/scss/core";

.fab-actions {
  position: fixed !important;
  right: 30px;
  bottom: 30px;
  z-index: 900;

  .mat-icon {
    color: white;
  }
}

.fab-menu-panel {
  background: transparent !important;
  box-shadow: none !important;

  .mat-menu-content {
    padding-right: 10px;

    > .menu-item {
      margin: 10px 0;
      display: flex;
      flex-flow: row;
      justify-content: flex-end;
      align-items: center;

      .item-title {
        margin-right: 5px;
        padding: 3px 10px;
        background: mat-color($background, card);
        @include mat-elevation(2);
        border-radius: 3px;
      }
    }

    .mat-mini-fab {
      background: mat-color($background, raised-button);
    }
  }

  &.mat-menu-panel {
    overflow: inherit;
  }
}

